<resources>
    <string name="app_name">CalculatorApp Skeleton Project</string>

    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>

    <string name="button_dot">.</string>

    <string name="button_sum">+</string>
    <string name="button_minus">-</string>
    <string name="button_clear">c</string>
    <string name="button_divide">/</string>
    <string name="button_equal">=</string>

    <dimen name="button_size">24sp</dimen>
</resources>
