<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_above="@id/buttonsContainer"
            android:background="@android:color/background_light"
            android:layout_marginBottom="4dp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:id="@+id/buttonsContainer"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                android:weightSum="8">

            <Button
                    android:id="@+id/button_one"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/button_one"
                    android:textSize="18sp"
                    android:onClick="operationFunction"
                    />


            <Button
                    android:id="@+id/button_two"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/button_two"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

            <Button
                    android:id="@+id/button_three"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/button_three"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

            <Button
                    android:id="@+id/button_divide"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:text="@string/button_divide"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                android:weightSum="8">

            <Button
                    android:id="@+id/button_four"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/button_four"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

            <Button
                    android:id="@+id/button_five"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/button_five"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

            <Button
                    android:id="@+id/button_six"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/button_six"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

            <Button
                    android:id="@+id/button_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:text="@string/button_minus"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                android:weightSum="8">

            <Button
                    android:id="@+id/button_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/button_seven"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

            <Button
                    android:id="@+id/button_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/button_eight"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

            <Button
                    android:id="@+id/button_nine"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/button_nine"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

            <Button
                    android:id="@+id/button_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:text="@string/button_sum"
                    android:textSize="18sp"
                    android:onClick="operationFunction"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                android:weightSum="8">

            <Button
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/button_clear"
                    android:onClick="operationFunction"/>

            <Button
                    android:id="@+id/button_zero"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/button_zero"
                    android:onClick="operationFunction"/>

            <Button
                    android:id="@+id/button_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="18sp"
                    android:text="@string/button_dot"
                    android:onClick="operationFunction"
                    />

            <Button
                    android:id="@+id/button_equal"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="2"
                    android:text="@string/button_equal"
                    android:onClick="operationFunction"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
